--- a/secs/old.tex
+++ b/secs/old.tex
@@ -118,7 +118,9 @@ badFxn   :: Bool -> Bool
 \begin{comment}
 \subsubsection{Extending Liquid Haskell}\label{extLiqHask}
 \markk{MARVIN - write something that makes more sense here}
-LiquidHaskell does not support certain popular syntax extensions to Haskell, such as LambdaCase (TODO list others). In the spirit of this work, we wish to support as much user defined code as possible. To this end, we can extend the refinement type system by allowing refinement type inference on repersentative examples of a higher order function. Take the following code \markk{find something from an actual library on hackage.}
+LiquidHaskell does not support certain popular syntax extensions to Haskell, such as LambdaCase (TODO list others). 
+
+In the spirit of this work, we wish to support as much user defined code as possible. To this end, we can extend the refinement type system by allowing refinement type inference on representative examples of a higher order function. Take the following code \markk{find something from an actual library on hackage.}
 
 \begin{lstlisting}
 {-# LANGAUGE LambdaCase #-}
@@ -133,6 +135,7 @@ We then apply a similar refinement type inference strategy as above to these exa
 This lets us support a larger subset of the language, and, in theory refinement type inference for other languages too!
 
 There are however repercussions to this approach. We are not guaranteed to generate a correct refinement type because we might not generate a fully representative examples. So we might prune away high order functions that are actually useful. 
+
 
 \end{comment}
 
