--- a/secs/problem.tex
+++ b/secs/problem.tex
@@ -1,6 +1,31 @@
-In this section, we formally define the space of functions we are interested in synthesizing. In section \ref{sound}, we will use this definition to show that although by the inherent nature of examples, it cannot be complete in general, our algorithm is complete for this subset of functions.
+Synthesizing correct programs is a well research problem, with a large body of work\cite{stuff}.
+However, if programming-by-example is to become a mainstream tool for programmers, the synthesized code must be easy for a human to read and modify. 
+The aim of \ourTool/ is to synthesize programs from examples that utilize user defined code.
+We focus particularly on data structure manipulation problems that can be solved with higher order functions.
 
-In particular, we support synthesizing first-order fitting functions that are constructed from one higher-order function in one first-order functional argument. Our solutions can be expressed up to reordering of terms as:
+\subsection{Example Syntax}
+Formally speaking, an \textit{example} is a pair of values with distinguished ``input'' and ``output'' elements, and an \textit{example set} is a set of examples all of whose inputs are of like type, and all of whose outputs are of like type. The output type does not necessarily match the input type.
+
+A user supplies examples via a custom pair constructor \texttt{:->}. This operator is used to differentiate between generic pairs and examples, but does not confer any additional structure. We require all higher order functions to be of a unified signature \texttt{$\_ \to * \to *$}, where the final kind of the signature is a function mapping the input type to the output type. Here, a kind is understood to be the type of a type constructor, in this case \texttt{$\to$}, which constructs a function type from two other types.
+
+The practical consequence of this format is that a user must partially uncurry (collapsing trailing function arguments into a single tuple argument) any higher-order function they are interested in using during synthesis.
+This also means that any type variable appearing in the higher-order function must be accounted for in the input and output types so that all type variables in its signature can be resolved.
+This allows us to conclude that any types that are between the input and first order function will be static initial values, which can be assigned using the process described in Section \ref{makeFxns}.
+This is a simple procedure that makes use of the user's domain knowledge of which parameters to the function will be given by the examples; consider:
+
+\begin{lstlisting}
+zipWith' :: (a -> b -> c) -> ([a], [b]) -> [c]
+zipWith' f (xs,ys) = zipWith f xs ys
+\end{lstlisting}
+
+\subsection{Solution Space}\label{solnSpace}
+By formally defining the space of functions we are interested in synthesizing, we can this definition to prove some properties on the algorithm.
+In particular we show in Section \ref{sound} that \ourTool/ is complete for this subset of functions.
+
+the solutions \ourTool/ supports synthesizing are higher-order data structure manipulation programs.
+The higher-order functions take a component function that is a first-order function, for example \codeinline{(+)}.
+The solution programs can be expressed as:
+% up to reordering of terms (we dont actually support this, should we really include this)
 
 \begin{lstlisting}
 solution ::
@@ -12,22 +37,10 @@ types = * | * -> types
 -- * matches on type variables and constructors.
 \end{lstlisting}
 
-Generally, the component function is applied across the \textsf{input} data structure, which the \textsf{solution} uses to construct an \textsf{output} data structure or reduction. As we will argue in section \ref{evaluation} this set is expressive enough to support the classic \texttt{map}, \texttt{filter}, and \texttt{fold} functions, as well as higher order functions found in imported modules and user-supplied code.
+Generally, the component function is applied across the \textsf{input} data structure, which the \textsf{solution} uses to construct an \textsf{output} data structure or reduction. As we will argue in Section \ref{evaluation} this set is expressive enough to support the classic \texttt{map}, \texttt{filter}, and \texttt{fold} functions, as well as higher order functions found in imported modules and user-supplied code.
 
-Our algorithm does not explicitly try to fit component functions to the examples. Instead, we leverage a promising body of existing work in synthesizing top-level, first-order functions \cite{potential, reviewers}. While it is out of scope to go in to detail, we will briefly discuss the integration of these synthesis procedures in section \ref{conclusions}.
+Our goal is to create a synthesis procedure that is easily portable across full implementations of functional languages (Haskell, OCaml, etc), so we prefer using a type directed approach to synthesis over explicit code analysis whenever possible. This increases the portability and longevity of our system. For this implementation we target Haskell, detailing the exact modifications needed to expand this to other languages in Section \ref{languageSupport}.  
 
-\subsection{Example Syntax}\label{exampleSyntax}
-Formally speaking, an \textit{example} is a pair of values with distinguished ``input'' and ``output'' elements, and an \textit{example set} is a set of examples all of whose inputs are of like type, and all of whose outputs are of like type. The output type does not necessarily match the input type.
-
-A user supplies examples via a custom pair constructor \texttt{:->}. This operator is used to differentiate between generic pairs and examples, but does not confer any additional structure. We require all higher order functions to be of a unified signature \texttt{$\_ \to * \to *$}, where the final kind of the signature is a function mapping the input type to the output type. Here, a kind is understood to be the type of a type constructor, in this case \texttt{$\to$}, which constructs a function type from two other types.
-
-The practical consequence of these restrictions is that a user will have to partially uncurry (collapsing trailing function arguments into a single tuple argument) any higher-order function they are interested in using during synthesis. This also means that any higher-order function may only be polymorphic in its input and output types so that all type variables in its signature must be resolvable from this data alone. This is a simple procedure, but requires user knowledge of which parameters to the function will be given by the examples; consider:
-
-\begin{lstlisting}
-zipWith' :: (a -> b -> c) -> ([a], [b]) -> [c]
-zipWith' f (xs,ys) = zipWith f xs ys
-\end{lstlisting}
-
-Then, any types that are between the input and first order function will be assumed to be static initial values. For example, \texttt{foldl (+)} needs an initial value of 0 to become the sum function.
+%Our algorithm does not explicitly try to fit component functions to the examples. Instead, we leverage a promising body of existing work in synthesizing top-level, first-order functions \cite{potential, reviewers}. While it is out of scope to go in to detail, we will briefly discuss the integration of these synthesis procedures in Section \ref{conclusions}.
 
 %The liquidHaskell predicate applied to this signature will be of the effect of \texttt{len([a],[b]) = len([c])}.
