--- a/secs/eval.tex
+++ b/secs/eval.tex
@@ -17,14 +17,14 @@ Since the standard library can be considered a relatively stable set of code, we
 On my machine, it removes ~20 seconds from the build time.
 
 
-Only performenign refinement type checking on functions that have the same type for input and out is a good idea. 
-Even if both type have a meausre (lists and trees), in general we have no guarantee that this is meaningful comparision.
-Since LiquidHaskell is the largest cost to our system, removing refinement type inference in these ambiguous cases provides a large performance gain.
+Only performing refinement type checking on functions that have the same type for input and out is a good idea. 
+Even if both type have a measure (lists and trees), in general we have no guarantee that this is meaningful comparison.
+Since \lhask/ is the largest cost to our system, removing refinement type inference in these ambiguous cases provides a large performance gain.
 As an example of the performance gain, in processing the Haskell standard library, base:Prelude, there are 7 out of 30 cases of higher order functions that do not need to be checked against refinement types using this approach.
 
 \subsection{Language Support}\label{languageSupport}
 
-We have tried to avoid code analysis at every stage of this paper. However there are two points where this has fallen short. First, we must parse a file to extract the name and type information of every top level identifier. Second, using liquidHaskell as a blackbox means that we are limited by liquidHaskell's ability to deduce refinement types over functions. Our eventual goal is to create a system that can be easily ported across functional languages. Luckily, the first code dependency is small enough to handle with ease in most typed languages (the grammar of a type signature is relatively small). However LiquidHaskell is a powerful tool that would be difficult to recreate in another language. 
+We have tried to avoid code analysis at every stage of this paper. However there are two points where this has fallen short. First, we must parse a file to extract the name and type information of every top level identifier. Second, using \lhask/ as a blackbox means that we are limited by \lhask/'s ability to deduce refinement types over functions. Our eventual goal is to create a system that can be easily ported across functional languages. Luckily, the first code dependency is small enough to handle with ease in most typed languages (the grammar of a type signature is relatively small). However \lhask/ is a powerful tool that would be difficult to recreate in another language. 
 
 To this end, we can extend the refinement type system by allowing refinement type inference on representative examples of a higher order function. We dont need the component to make any sense since we are only interested in size based refinement types. Take the following code.
 
