--- a/secs/online_assign.tex
+++ b/secs/online_assign.tex
@@ -1,18 +1,19 @@
 \subsection{Refinement types for examples}
 % getExampleType
-As in Section \ref{HORtypeInf}, we also consider two cases for examples. The first where the example input and output types match up to the top level type constructor, and the the case where the types do not match.
+As in Section \ref{HORtypeInf}, we also consider two cases for examples. The first, where the example input and output types match up to the top level type constructor, and the the case where the types do not match.
 
 % assignRType
 In the case that the types do match, we find the set of refinement types that the examples satisfy. Generating refinement type predicates about the size of the input and output, as in Section \ref{HORtypeInf}, we apply the same algorithm from Listing \ref{listing:addRType}. For instance, the example set:
 
 \begin{lstlisting}[caption=Refinement type inference for examples,label=exRTypeGen]
-exs :: [Int] :-> [Int]
-exs = [[1,2,3,4] :-> [1,3],
+ex :: [Int] :-> [Int]
+ex = [[1,2,3,4] :-> [1,3],
        [2,4,6,8] :-> [],
        [5,7] :-> [5,7]]
        
-exsR :: inExs :[Int] :-> 
-       {outExs:[Int] | len inExs >= len outExs }
+exRType ::
+  inExs :[Int] :-> 
+ {outExs:[Int] | len inExs >= len outExs }
 \end{lstlisting}
 
 \noindent would have the final refinement type of \codeinline{exsR}, since all of the examples suggest that the output list does not grow. 
